<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp"
    android:background="@drawable/lo">

    <LinearLayout
        android:id="@+id/botones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_margin="10sp"
        >

        <Button
            android:id="@+id/solution_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5sp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/solution"
            android:fontFamily="@font/concert_one"/>

        <Button
            android:id="@+id/info_button"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:layout_margin="5sp"
            android:fontFamily="@font/concert_one"
            android:text="@string/rules"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5sp"
            android:fontFamily="@font/concert_one"
            android:src="@drawable/ic_baseline_replay_24"
            style="@style/Widget.AppCompat.Button"
            android:textColor="@color/white"
            android:backgroundTint="#5C3875" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fondoshape"
        android:paddingTop="15sp"
        android:paddingBottom="25sp"
        android:paddingLeft="20sp"
        android:paddingRight="20sp"
        android:layout_margin="20sp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_below="@+id/botones"
        >

        <TextView
            android:id="@+id/time_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_00_00"
            android:textColor="@color/white"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:fontFamily="@font/concert_one"/>

        <TextView
            android:id="@+id/click_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/click"
            android:textColor="@color/white"
            android:layout_marginLeft="20sp"
            android:layout_marginRight="20sp"
            android:layout_marginTop="10sp"
            android:layout_marginBottom="10sp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:textStyle="bold"
            tools:ignore="RtlHardcoded"
            android:fontFamily="@font/concert_one"/>

    </LinearLayout>



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/info"
        tools:ignore="SpeakableTextPresentCheck">

        <GridLayout
            android:id="@+id/grid_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/fondoshape"
            android:layout_margin="10sp"
            android:padding="15sp"
            android:alignmentMode="alignMargins"
            android:textColor="@color/white"
            android:columnCount="4"
            android:columnOrderPreserved="false"
            android:rowCount="4"
            android:rowOrderPreserved="false"
            android:useDefaultMargins="true"
            android:fontFamily="@font/concert_one"/>

    </ScrollView>


</RelativeLayout>


